// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Converter  with currencies and rates 1`] = `
<DocumentFragment>
  <div
    class="fe-wallet__converter"
  >
    <div
      class="fe-wallet__converter__crypto"
    >
      <select
        aria-label="converter.from.dropdown.aria_label"
        class="fe-wallet__dropdown "
        id="converter.from.dropdown.name"
        name="converter.from.dropdown.name"
      >
        <option
          value="0"
        >
          BTC
        </option>
        <option
          value="1"
        >
          ETH
        </option>
        <option
          value="2"
        >
          USDC
        </option>
        <option
          value="3"
        >
          LTC
        </option>
        <option
          value="4"
        >
          DAI
        </option>
        <option
          value="5"
        >
          AXS
        </option>
      </select>
      <input
        aria-label="converter.from.input.aria_label"
        class="fe-wallet__converter__input"
        name="converter.from.input.name"
        type="number"
        value="0"
      />
    </div>
    <div
      class="fe-wallet__converter__icon"
    >
      <svg
        class="icon"
        height="16"
        viewBox="0 0 24 16"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M14.501 2.52607C14.2545 2.26833 14.2546 1.86225 14.501 1.60453L15.8387 0.205879C16.1013 -0.068637 16.5398 -0.0686247 16.8023 0.205906L23.8151 7.53914C24.0616 7.79687 24.0616 8.20292 23.8152 8.46066L16.8023 15.7941C16.5398 16.0686 16.1012 16.0686 15.8387 15.7941L14.501 14.3952C14.2546 14.1375 14.2546 13.7315 14.501 13.4737L18.1522 9.6558L0.666666 9.6558C0.298476 9.6558 0 9.35732 0 8.98913V7.01087C0 6.64268 0.298476 6.3442 0.666666 6.3442L18.1522 6.3442L14.501 2.52607Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="fe-wallet__converter__crypto"
    >
      <select
        aria-label="converter.to.dropdown.aria_label"
        class="fe-wallet__dropdown "
        id="converter.to.dropdown.name"
        name="converter.to.dropdown.name"
      >
        <option
          value="0"
        >
          BTC
        </option>
        <option
          value="1"
        >
          ETH
        </option>
        <option
          value="2"
        >
          USDC
        </option>
        <option
          value="3"
        >
          LTC
        </option>
        <option
          value="4"
        >
          DAI
        </option>
        <option
          value="5"
        >
          AXS
        </option>
      </select>
      <input
        aria-label="converter.to.input.aria_label"
        class="fe-wallet__converter__input"
        name="converter.to.input.name"
        readonly=""
        type="number"
        value="0"
      />
    </div>
    <button
      aria-label="converter.button.aria_label"
      class="fe-wallet__converter__submit"
    >
      converter.button.label
    </button>
  </div>
</DocumentFragment>
`;

exports[`renders Converter  without currencies and rates 1`] = `
<DocumentFragment>
  <div
    class="fe-wallet__converter"
  >
    <div
      class="fe-wallet__converter__crypto"
    >
      <select
        aria-label="converter.from.dropdown.aria_label"
        class="fe-wallet__dropdown "
        id="converter.from.dropdown.name"
        name="converter.from.dropdown.name"
      />
      <input
        aria-label="converter.from.input.aria_label"
        class="fe-wallet__converter__input"
        name="converter.from.input.name"
        type="number"
        value="0"
      />
    </div>
    <div
      class="fe-wallet__converter__icon"
    >
      <svg
        class="icon"
        height="16"
        viewBox="0 0 24 16"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M14.501 2.52607C14.2545 2.26833 14.2546 1.86225 14.501 1.60453L15.8387 0.205879C16.1013 -0.068637 16.5398 -0.0686247 16.8023 0.205906L23.8151 7.53914C24.0616 7.79687 24.0616 8.20292 23.8152 8.46066L16.8023 15.7941C16.5398 16.0686 16.1012 16.0686 15.8387 15.7941L14.501 14.3952C14.2546 14.1375 14.2546 13.7315 14.501 13.4737L18.1522 9.6558L0.666666 9.6558C0.298476 9.6558 0 9.35732 0 8.98913V7.01087C0 6.64268 0.298476 6.3442 0.666666 6.3442L18.1522 6.3442L14.501 2.52607Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="fe-wallet__converter__crypto"
    >
      <select
        aria-label="converter.to.dropdown.aria_label"
        class="fe-wallet__dropdown "
        id="converter.to.dropdown.name"
        name="converter.to.dropdown.name"
      />
      <input
        aria-label="converter.to.input.aria_label"
        class="fe-wallet__converter__input"
        name="converter.to.input.name"
        readonly=""
        type="number"
        value="0"
      />
    </div>
    <button
      aria-label="converter.button.aria_label"
      class="fe-wallet__converter__submit"
    >
      converter.button.label
    </button>
  </div>
</DocumentFragment>
`;
